--- a/index.html
+++ b/index.html
@@ -424,12 +424,12 @@
                                     </div>
                                     <div class="more-info ">
                                         <p class="lead ">
-                                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis dolorum dolorem soluta quidem expedita aperiam aliquid at. Totam magni ipsum suscipit amet? Autem nemo esse laboriosam ratione nobis mollitia inventore?
+                                            I am working to give my clients the best expereince and comfort.
                                         </p>
                                         <ul class="list-ico ">
-                                            <li><span class="ion-ios-location "></span> 329 WASHINGTON ST BOSTON, MA 02108</li>
-                                            <li><span class="ion-ios-telephone "></span> (617) 557-0089</li>
-                                            <li><span class="ion-email "></span> contact@example.com</li>
+                                            <li><span class="ion-ios-location "></span> Cheapside Junction P.O. St. ELIZABETH, JA</li>
+                                            <li><span class="ion-ios-telephone "></span> (876) 420-6885</li>
+                                            <li><span class="ion-email "></span> adalejohnson@yahoo.com</li>
                                         </ul>
                                     </div>
                                     <div class="socials ">
@@ -452,7 +452,7 @@
                 <div class="row ">
                     <div class="col-sm-12 ">
                         <div class="copyright-box ">
-                            <p class="copyright ">&copy; Copyright <strong>DevFolio</strong>. All Rights Reserved</p>
+                            <p class="copyright ">&copy; Copyright <strong>AdaleWeb</strong>. All Rights Reserved</p>
                             <div class="credits ">
                                 <!--
                   All the links in the footer should remain intact.
@@ -460,7 +460,7 @@
                   Licensing information: https://bootstrapmade.com/license/
                   Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=DevFolio
                 -->
-                                Designed by <a href="https://bootstrapmade.com/ ">BootstrapMade</a>
+                                Designed by <a href="https://bootstrapmade.com/ ">BootstrapMade and AdaleWeb</a>
                             </div>
                         </div>
                     </div>
