--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
             <div class="row">
                 <div class="col-md-4">
                     <div class="work-box">
-                        <a href="img/movie poster.jpg" data-lightbox="gallery-mf" style="height:100px">
+                        <a href="img/movie poster.jpg" data-lightbox="gallery-mf">
                             <div class=" work-img ">
                                 <img src="img/movie poster.jpg " alt=" " class="img-fluid ">
                             </div>
@@ -335,7 +335,7 @@
                 <!-- south east college -->
                 <div class="col-md-4 ">
                     <div class="work-box ">
-                        <a href="img/south east.jpg " data-lightbox="gallery-mf ">
+                        <a href="img/south east.jpg " data-lightbox="gallery-mf " style="height:100px">
                             <div class="work-img ">
                                 <img src="img/south east.jpg " alt=" " class="img-fluid ">
                             </div>
@@ -363,7 +363,24 @@
     </section>
     <!--/ Section Portfolio End /-->
 
-
+    <section class="portfolio-mf sect-pt4 route">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-md-12 col-lg-5 offset-lg-1 text">
+                    <h3>Website Project</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean eget velit ultricies, feugiat est sed, efr nunc, vivamus vel accumsan dui. Quisque ac dolor cursus, volutpat nisl vel, porttitor eros.</p>
+                </div>
+                <div class="col-md-12 col-lg-5">
+                    <div class="portfolio-laptop-mockup">
+                        <div class="screen">
+                            <div class="screen-content" style="background-image:url(&quot;assets/img/tech/image6.png&quot;);"></div>
+                        </div>
+                        <div class="keyboard"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!--/ Section Contact-Footer Star /-->
     <section id="contact" class="paralax-mf footer-paralax bg-image sect-mt4 route " style="background-image: url(img/overlay-bg.jpg) ">
