--- a/index.html
+++ b/index.html
@@ -335,25 +335,29 @@
                 <!-- south east college -->
                 <div class="col-md-4 ">
                     <div class="work-box ">
-                        <a href="img/south east.jpg " data-lightbox="gallery-mf " style="height:100px">
+                        <a href="https://www.southeastcollegeinfo.com/"><img src="img/south east.jpg " data-lightbox="gallery-mf " style="height:100px">
                             <div class="work-img ">
-                                <img src="img/south east.jpg " alt=" " class="img-fluid ">
-                            </div>
-                            <div class="work-content ">
-                                <div class="row ">
-                                    <div class="col-sm-8 ">
-                                        <h2 class="w-title ">South East College Website</h2>
-                                        <div class="w-more ">
-                                            <span class="w-ctegory ">Web Design</span> / <span class="w-date ">18 Apr. 2017</span>
-                                        </div>
+                                <img src="img/south east.jpg " alt=" " class="img-fluid "></a>
+                        </div>
+                        <div class="work-content ">
+                            <div class="row ">
+                                <div class="col-sm-8 ">
+                                    <a href="https://www.southeastcollegeinfo.com/">
+                                        <h2 class="w-title ">
+                                            South East College Website
+                                        </h2>
+                                    </a>
+                                    <div class="w-more ">
+                                        <span class="w-ctegory ">Web Design</span> / <span class="w-date ">18 Apr. 2017</span>
                                     </div>
-                                    <div class="col-sm-4 ">
-                                        <div class="w-like ">
-                                            <span class="ion-ios-plus-outline "></span>
-                                        </div>
+                                </div>
+                                <div class="col-sm-4 ">
+                                    <div class="w-like ">
+                                        <span class="ion-ios-plus-outline "></span>
                                     </div>
                                 </div>
                             </div>
+                        </div>
                         </a>
                     </div>
                 </div>
@@ -367,8 +371,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-md-12 col-lg-5 offset-lg-1 text">
-                    <h3>Website Project</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean eget velit ultricies, feugiat est sed, efr nunc, vivamus vel accumsan dui. Quisque ac dolor cursus, volutpat nisl vel, porttitor eros.</p>
+
                 </div>
                 <div class="col-md-12 col-lg-5">
                     <div class="portfolio-laptop-mockup">
