--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
                 <!-- south east college -->
                 <div class="col-md-4 ">
                     <div class="work-box ">
-                        <a href="https://www.southeastcollegeinfo.com/"><img src="img/south east.jpg " data-lightbox="gallery-mf " style="height:100px">
+                        <a href="https://www.southeastcollegeinfo.com/" data-lightbox="gallery-mf " style="height:100px">
                             <div class="work-img ">
                                 <img src="img/south east.jpg " alt=" " class="img-fluid "></a>
                         </div>
