--- a/index.html
+++ b/index.html
@@ -310,34 +310,34 @@
                 </div>
                 <div class="col-md-4 ">
                     <div class="work-box ">
-                        <a href="img/vikings.jpg " data-lightbox="gallery-mf ">
-                            <div class="work-img ">
-                                <img src="img/vikings.jpg " alt=" " class="img-fluid ">
-                            </div>
-                            <div class="work-content ">
-                                <div class="row ">
-                                    <div class="col-sm-8 ">
-                                        <h2 class="w-title ">Viking OS website</h2>
-                                        <div class="w-more ">
-                                            <span class="w-ctegory ">Web Design</span> / <span class="w-date ">20 Feb. 2019</span>
-                                        </div>
+                        <a href="vikingOS/index.html" data-lightbox="gallery-mf "></a>
+                        <div class="work-img ">
+                            <img src="img/vikings.jpg " alt=" " class="img-fluid ">
+                        </div>
+                        <div class="work-content ">
+                            <div class="row ">
+                                <div class="col-sm-8 ">
+                                    <h2 class="w-title ">Viking OS website</h2>
+                                    <div class="w-more ">
+                                        <span class="w-ctegory ">Web Design</span> / <span class="w-date ">20 Feb. 2019</span>
                                     </div>
-                                    <div class="col-sm-4 ">
-                                        <div class="w-like ">
-                                            <span class="ion-ios-plus-outline "></span>
-                                        </div>
+                                </div>
+                                <div class="col-sm-4 ">
+                                    <div class="w-like ">
+                                        <span class="ion-ios-plus-outline "></span>
                                     </div>
                                 </div>
                             </div>
+                        </div>
                         </a>
                     </div>
                 </div>
                 <!-- south east college -->
                 <div class="col-md-4 ">
                     <div class="work-box ">
-                        <a href="https://www.southeastcollegeinfo.com/" data-lightbox="gallery-mf " style="height:100px">
-                            <div class="work-img ">
-                                <img src="img/south east.jpg " alt=" " class="img-fluid "></a>
+                        <a href="https://www.southeastcollegeinfo.com/" data-lightbox="gallery-mf " style="height:100px"></a>
+                        <div class="work-img ">
+                            <img src="img/south east.jpg " alt=" " class="img-fluid ">
                         </div>
                         <div class="work-content ">
                             <div class="row ">
