--- a/index.html
+++ b/index.html
@@ -310,10 +310,11 @@
                 </div>
                 <div class="col-md-4 ">
                     <div class="work-box ">
-                        <a href="vikingOS/index.html" data-lightbox="gallery-mf "></a>
-                        <div class="work-img ">
-                            <img src="img/vikings.jpg " alt=" " class="img-fluid ">
-                        </div>
+                        <a href="vikingOS/index.html" data-lightbox="gallery-mf ">
+                            <div class="work-img ">
+                                <img src="img/vikings.jpg " alt=" " class="img-fluid ">
+                            </div>
+                        </a>
                         <div class="work-content ">
                             <div class="row ">
                                 <div class="col-sm-8 ">
