--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
                 <div class="col-md-4 ">
                     <div class="work-box ">
                         <a href="vikingOS/index.html" data-lightbox="gallery-mf ">
-                            <img src="img/vikings.jpg">
+                            <img src="img/vikings.jpg" class="work-img img-fluid">
                         </a>
                         <div class="work-content ">
                             <div class="row ">
