--- a/index.html
+++ b/index.html
@@ -310,9 +310,7 @@
                 </div>
                 <div class="col-md-4 ">
                     <div class="work-box ">
-                        <a href="vikingOS/index.html" data-lightbox="gallery-mf ">
-                            <img src="img/vikings.jpg" class="work-img img-fluid">
-                        </a>
+                        <a href="vikingOS/index.html"><img src="img/vikings.jpg" class="work-img img-fluid"></a>
                         <div class="work-content ">
                             <div class="row ">
                                 <div class="col-sm-8 ">
