--- a/index.html
+++ b/index.html
@@ -310,7 +310,10 @@
                 </div>
                 <div class="col-md-4 ">
                     <div class="work-box ">
-                        <a href="vikingOS/index.html"><img src="img/vikings.jpg" class="work-img img-fluid"></a>
+                        <a href="vikingOS/index.html" data-lightbox="gallery-mf " style="height:100px"></a>
+                        <div class="work-img ">
+                            <img src="img/vikings.jpg" alt=" " class="img-fluid ">
+                        </div>
                         <div class="work-content ">
                             <div class="row ">
                                 <div class="col-sm-8 ">
