--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
                     <div class="work-box ">
                         <a href="img/fashion magazine1.jpg " data-lightbox="gallery-mf ">
                             <div class="work-img ">
-                                <img src="img/fashion magazine1.jpg " alt=" " class="img-fluid ">
+                                <img src="img/fashion magazine1.jpg " alt=" " class=".row.row-eq-height > .col-xs-4" class="img-fluid ">
                             </div>
                             <div class="work-content ">
                                 <div class="row ">
