--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
                     <div class="work-box ">
                         <a href="img/fashion magazine1.jpg " data-lightbox="gallery-mf ">
                             <div class="work-img ">
-                                <img src="img/fashion magazine1.jpg " alt=" " class=".row.row-eq-height > .col-xs-4" class="img-fluid ">
+                                <img src="img/fashion magazine1.jpg " alt=" " class="img-fluid ">
                             </div>
                             <div class="work-content ">
                                 <div class="row ">
@@ -310,9 +310,9 @@
                 </div>
                 <div class="col-md-4 ">
                     <div class="work-box ">
-                        <a href="vikingOS/index.html" data-lightbox="gallery-mf " style="height:100px"></a>
+                        <a href="img/vikings.jpg" data-lightbox="gallery-mf " style="height:100px"></a>
                         <div class="work-img ">
-                            <img src="img/vikings.jpg" alt=" " class="img-fluid ">
+                            <a href="vikingOS/index.html"> <img src="img/vikings.jpg" alt=" " class="img-fluid "></a>
                         </div>
                         <div class="work-content ">
                             <div class="row ">
@@ -335,9 +335,9 @@
                 <!-- south east college -->
                 <div class="col-md-4 ">
                     <div class="work-box ">
-                        <a href="https://www.southeastcollegeinfo.com/" data-lightbox="gallery-mf " style="height:100px"></a>
+                        <a href="img/south east.jpg " data-lightbox="gallery-mf " style="height:100px"></a>
                         <div class="work-img ">
-                            <img src="img/south east.jpg " alt=" " class="img-fluid ">
+                            <a href="https://www.southeastcollegeinfo.com/"> <img src="img/south east.jpg " alt=" " class="img-fluid "></a>
                         </div>
                         <div class="work-content ">
                             <div class="row ">
