--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
                                                     </div>
                                                 </div>
                                                 <div class="col-md-12 ">
-                                                    <button type="submit " class="button button-a button-big button-rouded ">Send Message</button>
+                                                    <button type="submit " class="button button-a button-big button-rouded "><a href="mailto:someone@yoursite.com">Send Message</a> </button>
                                                 </div>
                                             </div>
                                         </form>
