--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
                     <div class="work-box ">
                         <a href="img/vikings.jpg" data-lightbox="gallery-mf " style="height:100px"></a>
                         <div class="work-img ">
-                            <a href="vikingOS/index.html"> <img src="img/vikings.jpg" alt=" " class="img-fluid "></a>
+                            <a href="vikingOS/index.html" target="_blank"> <img src="img/vikings.jpg" alt=" " class="img-fluid "></a>
                         </div>
                         <div class="work-content ">
                             <div class="row ">
@@ -337,7 +337,7 @@
                     <div class="work-box ">
                         <a href="img/south east.jpg " data-lightbox="gallery-mf " style="height:100px"></a>
                         <div class="work-img ">
-                            <a href="https://www.southeastcollegeinfo.com/"> <img src="img/south east.jpg " alt=" " class="img-fluid "></a>
+                            <a href="https://www.southeastcollegeinfo.com/" target="_blank"> <img src="img/south east.jpg " alt=" " class="img-fluid "></a>
                         </div>
                         <div class="work-content ">
                             <div class="row ">
