--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>DevFolio Bootstrap Template</title>
+    <title>Adale Portfolio</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -480,7 +480,7 @@
                   Licensing information: https://bootstrapmade.com/license/
                   Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=DevFolio
                 -->
-                                Designed by <a href="https://bootstrapmade.com/ ">BootstrapMade and AdaleWeb</a>
+                                Designed by and AdaleWeb
                             </div>
                         </div>
                     </div>
